# freecut_api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  ai_agents_workflow.md  openapi.json  rust-toolchain.toml
ai_docs/: API_SPEC.md  CONTEXT.md  CONTEXT_v2.md  Plan_refactor_topk_business_scoring.md  last_state.md
docs/: API_SPEC.md  DOCKER_DEPLOYMENT.md  PRACTICAL_SETTINGS.md
docs/research/: README.md  (+3 more)
examples/: optimize_request.json  optimize_response_ok.json
scripts/: alns_time_sweep_quality.py  analyze_failed_seeds.py  analyze_internal_void.py  analyze_sheet_util.py  analyze_voids.py  beam_time_sweep_quality.py  benchmark_time_limit.py  check_research_log_sync.py  deep_param_sweep.py  diag_nested.py  docker_smoke.sh  freecut_check.py  greedy_optimize.py  multi_agent_workflow.sh  optimize_search.py  portfolio_time_sweep_quality.py  portfolio_vs_standard_quality.py  preset_validation.py  preset_validation_v2.py  quick_svg_test.py  regen_balanced_svg.py  research_sweep.py  restart_sweep_quality.py  save_balanced_layouts.py  save_top5_layouts.py  sweep_frag_penalty.py  test_greedy_optimize.py  test_min_util_balance.py  test_multisheet_oversized.py  test_portfolio_candidates.py  test_retry_strategy.py  test_sheet_penalty.py  test_top5_seeds.py  test_v10_zones_aware_peel.py  test_v11_peel_nested_mix.py  test_v12_nested_first_peel.py  test_v13_zones_penalty.py  test_v14_guill_repack.py  test_v15_zones_fitness.py  test_v16_sheet_repair.py  (+49 more)
src/: config.rs  main.rs  models.rs  openapi.rs  optimizer.rs  tests.rs  vacuum.rs  validation.rs
(+53 files in other folders)
